--- a/src/App.css
+++ b/src/App.css
@@ -4,7 +4,6 @@
   justify-content: center;
   align-items: center;
   height: 100vh;
-
   margin: 3%;
 }
 .details-container {
@@ -33,16 +32,28 @@
   justify-content: space-around;
   align-items: center;
 }
+
 .pagination-container {
   display: flex;
+}
+@media screen and (max-width: 768px) {
+  .pagination-container {
+    display: flex;
+    justify-content: space-around;
+  }
 }
 .buttons-container {
   display: flex;
   align-self: center;
   justify-content: center;
-  margin-left: 25%;
+  margin-left: 30%;
   justify-content: space-between;
   align-items: center;
+}
+@media screen and (max-width: 768px) {
+  .buttons-container {
+    margin-left: 5%;
+  }
 }
 .disabled-button {
   border: 1px solid #66a3ff;
